--- a/readme/changelog
+++ b/readme/changelog
@@ -1,4 +1,20 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.4.7 :
+* Introduced compatibility for the windows port
+* Improved OS2 compatibility for snapshots
+* Added option to compress the logfile before sending it via e-mail
+* Added next/previous error buttons at commands output window
+* Added feature to backup profile, log and snapshot data to the destination after a task run
+* Added protection rule: Exclude list is disabled when user selects "only include", to avoid confusion
+* Added a "repeat-on-fail" feature for running tasks
+* Added "quite mode" during run, to only display errors and important messages
+* Added the ".gvfs" folder as an exclude template
+* Changed the global settings file from Qvariant to simple text
+* Changed the schedule file from Qvariant to simple text
+* Changed the profile import/export feature so that logs and snapshot data are included too
+* Fixed issue: email feature reported "process timeout"
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Version 0.4.6 :
 * Fixed issue: Older snapshots restore did not always work as expected
 * Fixed issue: ".changes.log" files sometimes did not update their lines normaly
