--- a/readme/changelog
+++ b/readme/changelog
@@ -14,6 +14,7 @@ Version 0.4.7 :
 * Changed the schedule file from Qvariant to simple text
 * Changed the profile import/export feature so that logs and snapshot data are included too
 * Fixed issue: email feature reported "process timeout"
+* Updated manual
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Version 0.4.6 :
