--- a/readme/changelog
+++ b/readme/changelog
@@ -10,10 +10,14 @@ Version 0.4.7 :
 * Added "quite mode" during run, to only display errors and important messages
 * Added the ".gvfs" folder as an exclude template
 * Added "--super" and "--numeric-ids" as command options templates
+* Added option to schedule profile runs on an hourly basis
 * Changed the global settings file from Qvariant to simple text
 * Changed the schedule file from Qvariant to simple text
 * Changed the profile import/export feature so that logs and snapshot data are included too
+* Fixed issue: email fetaure sent the oldest logfile instead of the newest one
 * Fixed issue: email feature reported "process timeout"
+* Fixed various issues when spaces are used at a remote path
+* Fixed issue: wrong snapshot directory name when remote source was used
 * Updated manual
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
