--- a/readme/changelog
+++ b/readme/changelog
@@ -1,4 +1,8 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.4.8 :
+* Fixed issue: Segmentation fault under certain circumstances, when --skip-critical is used as an argument and there exists one or more actual CRITICAL tasks.
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Version 0.4.7 :
 * Introduced compatibility for the windows port
 * Improved OS2 compatibility for snapshots
@@ -14,7 +18,7 @@ Version 0.4.7 :
 * Changed the global settings file from Qvariant to simple text
 * Changed the schedule file from Qvariant to simple text
 * Changed the profile import/export feature so that logs and snapshot data are included too
-* Fixed issue: email fetaure sent the oldest logfile instead of the newest one
+* Fixed issue: email feature sent the oldest logfile instead of the newest one
 * Fixed issue: email feature reported "process timeout"
 * Fixed various issues when spaces are used at a remote path
 * Fixed issue: Creation of the snapshot directory at a remote destination when the max No. of snapshots was not reached
