--- a/manpage/luckybackup.8
+++ b/manpage/luckybackup.8
@@ -1,7 +1,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH LUCKYBACKUP 8 "2011-01-12"
+.TH LUCKYBACKUP 8 "2017-10-05"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -93,5 +93,5 @@ via the gui main window help menu.
 .SH AUTHOR
 luckybackup was written by <Loukas Avgeriou>.
 .PP
-This manual page was written by luckyb <luckyb69@sourceforge.net>,
+This manual page was written by luckyb <luckyb69@users.sourceforge.net>,
 for the Debian project (but may be used by others).
